2010-05-10  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/bsd-security.c: Use global buffer for bsd_stream_read_sync

2010-05-07  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c: Use global buffer for 
	  security_stream_read_sync.
	* recover-src/amrecover.c, recover-src/extract_list.c: Free buffer
	  returnned by security_stream_read_sync.

2010-05-07  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/rait-device.c: fix assertion failure when a child device
	  gives an error
	* perl/Amanda/Changer/rait.pm: add support for braced drive specs
	* perl/Amanda/Changer/robot.pm: bail out if the drive is not allowed
	  for an eject operation
	* man/xml-source/amanda-changers.7.xml: document rait changer drive
	  specifications

2010-05-06  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c: New INCLUDE-LIST-GLOB and EXCLUDE-LIST-GLOB
	  for restore, escape the non glob include and exclude.
	* client-src/client_util.h: Add include_list_glob and exclude_list_glob
	  to backup_support_option_t.
	* client-src/client_util.c: Parse new support option.
	* man/xml-source/amgtar.8.xml: Ducument new properties.
	* server-src/amindexd.c: Don't clean_backslash, indexd should be sent
	  asis to amrecover.

2010-05-05  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Changer/rait.pm: eliminate warning when device does not
	  have a valid status

2010-05-05  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/s3-device.c: fix several fatal flaws in the
	  read_block implementation

2010-05-05  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Report/human.pm: don't assume parts are defined

2010-05-04  Dustin J. Mitchell <dustin@zmanda.com>
	* man/xml-source/amanda-devices.7.xml: add more regions
	* man/xml-source/amcheckdump.8.xml: remove duplicate section

2010-05-04  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c: Free packet on close.
