@@ -77,8 +77,8 @@ build-stamp: /sbin/dump /usr/bin/smbclient
 		--with-smbclient=$(BINDIR)/smbclient \
 		--with-debugging=$(LOGDIR) \
 		--with-tcpportrange=11000,11040 \
+                --with-low-tcpportrange=700,710 \
 		--with-udpportrange=700,740 \
-                --with-low-udpportrange=700,710 \
 		--with-ssh-security \
 		--with-assertions \
 		--enable-s3-device \
